# UreaOpt

./: .gitignore  TODO.md  UreaOpt.py  data_exploration.ipynb  data_processing.ipynb  data_processing_power.ipynb  geographical_analysis.ipynb  pyproject.toml
data/processed/: cities.xlsx  cocoa.xlsx  coffee.xlsx  corn.xlsx  data_ibge.csv  data_pam_2022.csv  location_db.csv  location_db.p  permanent_total.xlsx  power_grid_prices.p  rice.xlsx  soy.xlsx  sugarcane.xlsx  temporary_total.xlsx
data/raw/: Annex Country Tables - FUBC 2018_rev22August2022.xlsx
data/results/: biomass_sold.p  biomass_used.p  biomass_used_microregions.p  biomass_used_state.p  energy_source_used_microregion.p  energy_source_used_microregion_CO.p  energy_source_used_microregion_N.p  energy_source_used_microregion_NE.p  energy_source_used_microregion_S.p  main_results.p  main_results_MS.p  main_results_SP.p  main_results_microregion.p  main_results_microregion_CO.p  main_results_microregion_N.p  main_results_microregion_NE.p  main_results_microregion_S.p  main_results_microregions.p  main_results_state.p  results.md  urea_sold.p
data/results_new/: energy_source_used_microregion_CO.p  energy_source_used_microregion_N.p  energy_source_used_microregion_NE.p  energy_source_used_microregion_S.p  energy_source_used_microregion_SE.p  energy_source_used_microregion_SE_lower_demand.p  energy_source_used_microregion_all.p  energy_source_used_microregion_coffee_husk.p  energy_source_used_microregion_corn_stover.p  energy_source_used_microregion_lower_demand.p  energy_source_used_microregion_rice_husk.p  (+11 more)
(+129 files in other folders)
