[project]
name = "ureaopt"
version = "0.1.0"
description = "Urea Production Optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyomo>=6.8.0",
    "scipy>=1.14.1",
    "unidecode>=1.3.8",
]
